LayoutTests:

Reviewed by Oliver.

        Test for http://bugs.webkit.org/show_bug.cgi?id=14646
        WebKit border radius properties are unavailable via JavaScript

        * fast/dom/getComputedStyle-borderRadius-expected.txt: Added.
        * fast/dom/getComputedStyle-borderRadius.html: Added.

WebCore:

        Reviewed by Oliver.

        Fix for http://bugs.webkit.org/show_bug.cgi?id=14646
        WebKit border radius properties are unavailable via JavaScript

        Test: fast/dom/getComputedStyle-borderRadius.html

        * css/CSSComputedStyleDeclaration.cpp:
        (WebCore::getBorderRadiusCornerValue): Helper function that returns a single value if
        width and the height of the corner radius are equal, and otherwise a pair.
        (WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):



Canonical link: https://commits.webkit.org/19087@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24436 268f45cc-cd09-0410-ab3c-d52691b4dbfc