WebCore/css/CSSValueList.cpp
@@ -2,7 +2,7 @@
  * This file is part of the DOM implementation for KDE.
  *
  * (C) 1999-2003 Lars Knoll (knoll@kde.org)
- * Copyright (C) 2004, 2005, 2006 Apple Computer, Inc.
+ * Copyright (C) 2004, 2005, 2006, 2007 Apple Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
@@ -26,6 +26,11 @@
 
 namespace WebCore {
 
+CSSValueList::CSSValueList(bool isSpaceSeparated)
+    : m_isSpaceSeparated(isSpaceSeparated)
+{
+}
+
 CSSValueList::~CSSValueList()
 {
 }
@@ -46,12 +51,16 @@ String CSSValueList::cssText() const
 
     unsigned size = m_values.size();
     for (unsigned i = 0; i < size; i++) {
-        if (!result.isEmpty())
-            result += ", ";
+        if (!result.isEmpty()) {
+            if (m_isSpaceSeparated)
+                result += " ";
+            else
+                result += ", ";
+        }
         result += m_values[i]->cssText();
     }
-    
+
     return result;
 }
 
-}
+} // namespace WebCore
